2008-04-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuffer.el (completion-table-with-terminator): Fix last fix.

2008-04-18  Andreas Schwab  <schwab@suse.de>

	* Makefile.in ($(MH_E_DIR)/mh-loaddefs.el): Depend on
	$(lisp)/subdirs.el.
	($(CAL_DIR)/cal-loaddefs.el): Likewise.
	($(CAL_DIR)/diary-loaddefs.el): Likewise.
	($(CAL_DIR)/hol-loaddefs.el): Likewise.

2008-04-18  Juanma Barranquero  <lekktu@gmail.com>

	* descr-text.el (describe-char-after):
	Use `define-obsolete-function-alias'.

	* dired-x.el (dired-omit-files-p): Use `define-obsolete-variable-alias'.

	* facemenu.el (facemenu-unlisted-faces): Fix obsolescence description.

	* savehist.el (savehist-load): Add WHEN to obsolescence declaration.
	Remove redundant obsolescence info in docstring.

	* vc-hooks.el (vc-ignore-vc-files, vc-master-templates)
	(vc-header-alist): Add WHEN to obsolescence declaration.
	(vc-state): Fix typo in docstring.

	* emacs-lisp/checkdoc.el (checkdoc-minor-keymap):
	Use `define-obsolete-variable-alias'.

	* emulation/tpu-edt.el (tpu-have-ispell):
	* international/codepage.el (codepage-setup):
	Fix typo in obsolescence declaration.

	* international/mule.el (char-coding-system-table):
	Remove redundant obsolescence info in docstring.
	(charset-list, generic-char-p, set-char-table-default):
	Fix typos in obsolescence decarations.

	* international/mule-diag.el (non-iso-charset-alist):
	Fix typo in obsolescence declaration.
	(decode-codepage-char): Remove redundant obsolescence info in docstring.

	* font-core.el (font-lock-defaults-alist):
	* font-lock.el (font-lock-reference-face):
	* frame.el (screen-height, screen-width, set-screen-width)
	(set-screen-height):
	* hilit-chg.el (highlight-changes-initial-state):
	* isearch.el (isearch-return-char):
	* log-edit.el (cvs-commit-buffer-require-final-newline)
	(cvs-changelog-full-paragraphs):
	* mouse.el (mouse-major-mode-menu, mouse-popup-menubar)
	(mouse-popup-menubar-stuff):